--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ dataBaseName=pre_project1
 serverTimezone=UTC
 useSSL=false
 user=root
-password=7CthdthVfhutyintqyf6
+password=
 allowPublicKeyRetrieval=true
